refactor: moved Move sanitization to Converter